--- a/views/internal.ejs
+++ b/views/internal.ejs
@@ -17,7 +17,7 @@
 
 	<script src="/node_modules/systemjs/dist/system.js"></script>
 	<script src="/node_modules/rxjs/bundles/Rx.min.js"></script>
-	<script src="/node_modules/angular2/bundles/angular2.min.js"></script>
+	<script src="/node_modules/angular2/bundles/angular2.dev.js"></script>
 	<script src="/node_modules/angular2/bundles/router.min.js"></script>
 	<script src="/node_modules/angular2/bundles/http.min.js"></script>
 
