Client+server language
Summary: T144

Test Plan: ..

Reviewers: dragos.pricope, catalin.dobre

Subscribers: ionut.paraschiv

Differential Revision: https://phabricator.3angletech.com/D62

--- a/assets/client/src/pages/external/pages/log-in/template/log-in-component.html
+++ b/assets/client/src/pages/external/pages/log-in/template/log-in-component.html
@@ -1,19 +1,19 @@
-<form [ngFormModel]="_logInService.loginForm" (submit)="logIn()">
-	<h1>Login</h1>
+<form [ngFormModel]="getDefaultControlGroup()" (submit)="logIn()">
+	<h1>{{ "Login" | translate }}</h1>
 	<div >
-		<input type="text" class="form-control" ngControl="email" placeholder="Email" [ngClass]="{invalid: controlIsInvalid('email')}" />
+		<input type="text" class="form-control" placeholder="{{ 'Email' | translate }}" ngControl="email" [ngClass]="{invalid: controlIsInvalid('email')}" />
 	</div>
 	<div>
-		<input type="password" class="form-control" placeholder="Password" />
+		<input type="password" class="form-control" placeholder="{{ 'Password' | translate }}" ngControl="password" [ngClass]="{invalid: controlIsInvalid('password')}" />
 	</div>
 	<div>
-		<button class="btn btn-default submit">Log in</button>
-		<a class="reset_pass" href="reset_password.html">Lost your password?</a>
+		<button class="btn btn-default submit">{{ 'Log In' | translate }}</button>
+		<a class="reset_pass" href="reset_password.html">{{ 'Lost your password?' | translate }}</a>
 	</div>
 	<div class="clearfix"></div>
 	<div class="separator">
-		<p class="change_link">New to site?
-			<button (click)="updatelang()" class="to_register"> Create Account </button>
+		<p class="change_link">{{ 'New to site?' | translate }}
+			<button (click)="updatelang()" class="to_register"> {{ 'Create Account' | translate }} </button>
 		</p>
 		<div class="clearfix"></div>
 	</div>
