--- a/views/external.ejs
+++ b/views/external.ejs
@@ -10,16 +10,17 @@
 
 	<title>UnitPal</title>
 
-	<script src="/node_modules/angular2/bundles/angular2-polyfills.min.js"></script>
-	<script src="/node_modules/es6-shim/es6-shim.min.js"></script>
+	
+	<!--<script src="/node_modules/es6-shim/es6-shim.min.js"></script>
 	<script src="/node_modules/systemjs/dist/system-polyfills.js"></script>
-	<script src="/node_modules/angular2/es6/prod/src/testing/shims_for_IE.js"></script>
+	<script src="/node_modules/angular2/es6/prod/src/testing/shims_for_IE.js"></script>-->
 
+	<script src="/node_modules/angular2/bundles/angular2-polyfills.min.js"></script>
 	<script src="/node_modules/systemjs/dist/system.js"></script>
 	<script src="/node_modules/rxjs/bundles/Rx.min.js"></script>
 	<script src="/node_modules/angular2/bundles/angular2.dev.js"></script>
-	<script src="/node_modules/angular2/bundles/router.min.js"></script>
-	<script src="/node_modules/angular2/bundles/http.min.js"></script>
+	<script src="/node_modules/angular2/bundles/router.dev.js"></script>
+	<script src="/node_modules/angular2/bundles/http.dev.js"></script>
 
 	<script src="/node_modules/underscore/underscore-min.js"></script>
 	
