--- a/views/external.ejs
+++ b/views/external.ejs
@@ -10,11 +10,21 @@
 
 	<title>UnitPal</title>
 
-	
-	<!--<script src="/node_modules/es6-shim/es6-shim.min.js"></script>
-	<script src="/node_modules/systemjs/dist/system-polyfills.js"></script>
-	<script src="/node_modules/angular2/es6/prod/src/testing/shims_for_IE.js"></script>-->
+	<!-- CSS -->
+	<link href="/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+	<link href="/node_modules/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+	<link href="/node_modules/animate.css/animate.min.css" rel="stylesheet">
+	<link href="/node_modules/bootstrap-daterangepicker/daterangepicker.css" rel="stylesheet">
+	<link href="/node_modules/toastr/build/toastr.min.css" rel="stylesheet">
+	<!-- Custom CSS -->
+	<link href="/client/static-assets/css/custom.css" rel="stylesheet">
+	<link href="/client/static-assets/css/unitpal.css" rel="stylesheet">
 
+	<!-- JS Libraries -->
+	<script src="/node_modules/jquery.1/node_modules/jquery/dist/jquery.min.js"></script>
+	<script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
+	<!-- Angular JS -->
 	<script src="/node_modules/angular2/bundles/angular2-polyfills.min.js"></script>
 	<script src="/node_modules/systemjs/dist/system.js"></script>
 	<script src="/node_modules/rxjs/bundles/Rx.min.js"></script>
@@ -22,14 +32,11 @@
 	<script src="/node_modules/angular2/bundles/router.dev.js"></script>
 	<script src="/node_modules/angular2/bundles/http.dev.js"></script>
 
+	<!-- Other JS Libraries -->
+	<script src="/node_modules/moment/min/moment.min.js"></script>
 	<script src="/node_modules/underscore/underscore-min.js"></script>
-	
-	<style>
-		/* TODO remove: testing purposes */
-		.invalid {
-			border-color: red;
-		}
-	</style>
+	<script src="/node_modules/bootstrap-daterangepicker/daterangepicker.js"></script>
+	<script src="/node_modules/pace-progress/pace.min.js"></script>
 
 	<%if (isDevelopmentEnvironment == true) {%>
 		<script>
