--- a/views/internal.ejs
+++ b/views/internal.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+	<base href="/home/">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<!-- Meta, title, CSS, favicons, etc. -->
 	<meta charset="utf-8">
