--- a/assets/client/src/pages/external/pages/log-in/template/log-in-component.html
+++ b/assets/client/src/pages/external/pages/log-in/template/log-in-component.html
@@ -1,10 +1,12 @@
 <form [ngFormModel]="getDefaultControlGroup()" (submit)="logIn()">
 	<h1>{{ "Login to " | translate }} UnitPal</h1>
-	<div [ngClass]="{bad: controlIsInvalid('email')}">
+	<div [ngClass]="{bad: controlIsInvalid('email')}" class="form-group">
 		<input type="text" class="form-control" placeholder="{{ 'Email' | translate }}" ngControl="email" />
+		<label *ngIf="controlIsInvalid('email')" class="form-label"><small><i class="fa fa-info-circle"></i> {{ 'Insert your email' | translate }}</small></label>
 	</div>
-	<div [ngClass]="{bad: controlIsInvalid('password')}">
+	<div [ngClass]="{bad: controlIsInvalid('password')}" class="form-group">
 		<input type="password" class="form-control" placeholder="{{ 'Password' | translate }}" ngControl="password" />
+		<label *ngIf="controlIsInvalid('password')" class="form-label"><small><i class="fa fa-info-circle"></i> {{ 'Insert your password' | translate }}</small></label>
 	</div>
 	<div>
 		<button class="btn btn-primary btn-lg submit" type="submit">{{ 'Log In' | translate }}</button>
