--- a/assets/client/src/pages/external/pages/reset-password/template/reset-password-component.html
+++ b/assets/client/src/pages/external/pages/reset-password/template/reset-password-component.html
@@ -1,7 +1,8 @@
 <form [ngFormModel]="getDefaultControlGroup()" (submit)="resetPassword()">
 	<h1>{{ "Reset Password" | translate }}</h1>
-	<div [ngClass]="{bad: controlIsInvalid('email')}">
+	<div [ngClass]="{bad: controlIsInvalid('email')}" class="form-group">
 		<input type="text" class="form-control" placeholder="{{ 'Email' | translate }}" ngControl="email" />
+		<label *ngIf="controlIsInvalid('email')" class="form-label"><small><i class="fa fa-info-circle"></i> {{ 'Invalid email' | translate }}</small></label>
 	</div>
 	<div>
 		<button class="btn btn-primary btn-lg" type="submit">{{ "Reset Password" | translate }}</button>
