--- a/assets/client/static-assets/css/unitpal.css
+++ b/assets/client/static-assets/css/unitpal.css
@@ -49,7 +49,7 @@ body, html, .container-fluid {   height: 100%;  }
 .main_container { padding:24px; }
 
 body.nav-md .container.body .left_col  { background-color:rgba(255, 255, 255, 0.66); color:#0b2139; float: none !important; display: table-cell;  }
-body.nav-md .container.body .right_col { float: none; display: table-cell; }
+body.nav-md .container.body .right_col { float: none; display: table-cell; vertical-align: top; }
 
 
 .nav.side-menu>li>a, .nav.child_menu>li>a { border-bottom:1px solid #fff;   padding: 13px 15px 13px; margin:0px; } 
@@ -88,6 +88,27 @@ body.nav-md .container.body .right_col { float: none; display: table-cell; }
     font-size: 12px;
 }
 
-.bad input {
-	border : 1px solid red !important;
+.bad input:focus {
+	border : 1px solid #fc8433 !important;
 }
+input:focus {
+	border : 1px solid #276bb6 !important;
+}
+.bad input {
+	border : 1px solid #A2A7A8 !important;
+}
+.bad .form-label {
+	background: #A2A7A8;
+}
+
+.form-control:focus + .form-label { background: #fc8433 !important; } 
+
+.form-label { 
+	padding:4px 8px; font-size:12px; margin-top:0px;
+	border-radius: 0px 0px 6px 6px;
+	-moz-border-radius: 0px 0px 6px 6px;
+	-webkit-border-radius: 0px 0px 6px 6px;
+	color:#fff;
+	margin-top:-1px;
+	display:block;
+ }
