--- a/assets/client/src/pages/external/pages/reset-password/template/reset-password-component.html
+++ b/assets/client/src/pages/external/pages/reset-password/template/reset-password-component.html
@@ -5,7 +5,7 @@
 		<label *ngIf="controlIsInvalid('email')" class="form-label"><small><i class="fa fa-info-circle"></i> {{ 'Invalid email' | translate }}</small></label>
 	</div>
 	<div>
-		<button class="btn btn-primary btn-lg" type="submit">{{ "Reset Password" | translate }}</button>
+		<loading-button [isLoading]="isLoading" title="Reset Password"></loading-button>
 	</div>
 	<div class="clearfix"></div>
 	<div class="separator">
