--- a/assets/client/src/pages/external/pages/update-password/template/update-password-component.html
+++ b/assets/client/src/pages/external/pages/update-password/template/update-password-component.html
@@ -4,12 +4,12 @@
 		<input type="password" class="form-control" placeholder="{{ 'New Password' | translate }}" ngControl="password" />
 		<label *ngIf="controlIsInvalid('password')" class="form-label"><small><i class="fa fa-info-circle"></i> {{ 'At least 6 characters, 1 number and 1 upper case' | translate }}</small></label>
 	</div>
-	<div [ngClass]="{bad: controlIsInvalid('passwordConfirmation')}" class="form-group">
+	<div [ngClass]="{bad: confirmationControlIsInvalid('passwordConfirmation', 'password')}" class="form-group">
 		<input type="password" class="form-control" placeholder="{{ 'Confirm Password' | translate }}" ngControl="passwordConfirmation" />
-		<label *ngIf="controlIsInvalid('passwordConfirmation')" class="form-label"><small><i class="fa fa-info-circle"></i> {{ 'The passwords should match' | translate }}</small></label>
+		<label *ngIf="confirmationControlIsInvalid('passwordConfirmation', 'password')" class="form-label"><small><i class="fa fa-info-circle"></i> {{ 'The passwords should match' | translate }}</small></label>
 	</div>
 	<div>
-		<button class="btn btn-primary btn-lg" type="submit">{{ "Update Password" | translate }}</button>
+		<loading-button [isLoading]="isLoading" title="Update Password"></loading-button>
 	</div>
 	<div class="clearfix"></div>
 	<div class="separator">
