--- a/assets/client/static-assets/css/custom.css
+++ b/assets/client/static-assets/css/custom.css
@@ -710,28 +710,25 @@ body.nav-md ul.nav.child_menu li:after {
 
 .nav.side-menu> li.current-page,
 .nav.side-menu> li.active {
-    border-right: 5px solid #fc8433;
+    border-right: 6px solid #fc8433 !important;
 }
 
 li.current-page {
     background: rgba(255, 255, 255, 0.5);
 }
 
-.nav.side-menu> li.active > a {
-    color: #0b2139;
-    background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #5b6479), color-stop(100%, #4c5566)), #686e78;
-    background: -webkit-linear-gradient(#334556, #2C4257), #2A3F54;
-    background: -moz-linear-gradient(#334556, #2C4257), #2A3F54;
-    background: -o-linear-gradient(#334556, #2C4257), #2A3F54;
-    background: linear-gradient(#334556, #2C4257), #2A3F54;
+.nav.side-menu> li.active > a, .nav.side-menu> li.current-page > a {
+    color: #000;
+    background:#fff;
     -webkit-box-shadow: rgba(0, 0, 0, 0.25) 0 1px 0, inset rgba(255, 255, 255, 0.16) 0 1px 0;
     -moz-box-shadow: rgba(0, 0, 0, 0.25) 0 1px 0, inset rgba(255, 255, 255, 0.16) 0 1px 0;
     box-shadow: rgba(0, 0, 0, 0.25) 0 1px 0, inset rgba(255, 255, 255, 0.16) 0 1px 0;
 }
 
 li.current-page a {
-    color: #fc8433 !important
+    color: #000;
 }
+.nav>li.disabled-page>a { color:#b1becd; cursor:crosshair !important; }
 
 .navbar-brand,
 .navbar-nav>li>a {
@@ -2517,8 +2514,6 @@ select.parsley-error {
     box-shadow: 0 0 4px -2px #CE5454;
     position: relative;
     left: 0;
-    /*-moz-animation: .7s 1 shake linear;*/
-    /*-webkit-animation: 0.7s 1 shake linear;*/
 }
 
 .item input,
@@ -5752,7 +5747,6 @@ form:after {
     transition: all 0.5s ease;
     border: 1px solid #c8c8c8;
     color: #777;
-    /*margin: 0 0 20px;*/
     width: 100%;
 }
 .login_content form input[type="text"]:focus,
@@ -5764,7 +5758,6 @@ form:after {
     -o-box-shadow: 0 0 2px #ed1c24 inset;
     box-shadow: 0 0 2px #A97AAD inset;
     background-color: #fff;
-    /*border: 1px solid #fc8433;*/
     outline: none;
 }
 
