--- a/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/basic-information/pages/name-address/template/wizard-basic-info-name-address.html
+++ b/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/basic-information/pages/name-address/template/wizard-basic-info-name-address.html
@@ -14,3 +14,8 @@
 		<p>{{ '[Wizard Step 0] Basic Information text' | translate }}</p>
 	</div>
 </div>
+<div class="row x_panel">
+	<div class="col-sm-12">
+		<basic-info-name-address-edit></basic-info-name-address-edit>
+	</div>
+</div>
