basic info - overview
Summary: basic info - overview T145

Test Plan: ...

Reviewers: catalin.dobre, dragos.pricope

Subscribers: ionut.paraschiv

Differential Revision: https://phabricator.3angletech.com/D71

--- a/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/basic-information/pages/overview/template/wizard-basic-info-overview.html
+++ b/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/basic-information/pages/overview/template/wizard-basic-info-overview.html
@@ -1,6 +1,6 @@
 <div class="row page-title">
 	<div class="col-sm-10">
-		<h1>{{ 'Basic Information' | translate }} <small>{{ 'name & address' | translate }}</small></h1>
+		<h1>{{ 'Basic Information' | translate }} <small>{{ 'overview' | translate }}</small></h1>
 	</div>
 
 	<div class="col-sm-2">
@@ -16,6 +16,6 @@
 </div>
 <div class="row x_panel">
 	<div class="col-sm-12">
-		<basic-info-name-address-edit></basic-info-name-address-edit>
+		<basic-info-overview-edit></basic-info-overview-edit>
 	</div>
 </div>
