--- a/assets/client/src/pages/internal/containers/common/basic-info/payments-policies/main/template/basic-info-payments-policies-edit.html
+++ b/assets/client/src/pages/internal/containers/common/basic-info/payments-policies/main/template/basic-info-payments-policies-edit.html
@@ -31,79 +31,10 @@
 	</div>
 
 	<div class="col-md-4 col-md-offset-1">
-
-		<label class="control-label">
-			<h3>VAT</h3>
-			<small>Add VATs that will laber on used</small></label>
-
-		<table class="table table-striped projects">
-			<thead>
-				<th></th>
-				<th></th>
-				<th></th>
-			</thead>
-			<tbody>
-				<tr>
-					<td>Room VAT</td>
-					<td>20%</td>
-					<td>
-						<a data-toggle="modal" href="#vatModal" class="btn btn-xs"><i class="fa fa-pencil"></i> Edit </a>
-					</td>
-				</tr>
-				<tr>
-					<td>Food VAT</td>
-					<td>8%</td>
-					<td>
-						<a data-toggle="modal" href="#vatModal" class="btn btn-xs"><i class="fa fa-pencil"></i> Edit </a>
-					</td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>
-						<a data-toggle="modal" href="#vatModal" class="btn btn-xs"><i class="fa fa-plus"></i> Add </a>
-					</td>
-					<td></td>
-				</tr>
-			</tbody>
-		</table>
+		<basic-info-tax-list [ccyCode]="hotel.ccyCode" [taxType]="vatTaxType"></basic-info-tax-list>
 	</div>
 
 	<div class="col-md-4">
-		<label class="control-label">
-			<h3>Other Taxes</h3>
-			<small>e.g. City Tax</small></label>
-
-
-
-		<table class="table table-striped projects">
-			<thead>
-				<th></th>
-				<th></th>
-				<th></th>
-			</thead>
-			<tbody>
-				<tr>
-					<td>City Tax</td>
-					<td>20 EUR</td>
-					<td>
-						<a data-toggle="modal" href="#otherTaxModal" class="btn btn-xs"><i class="fa fa-pencil"></i> Edit </a>
-					</td>
-				</tr>
-				<tr>
-					<td>Percentage Tax</td>
-					<td>8%</td>
-					<td>
-						<a data-toggle="modal" href="#otherTaxModal" class="btn btn-xs"><i class="fa fa-pencil"></i> Edit </a>
-					</td>
-				</tr>
-				<tr>
-					<td></td>
-					<td>
-						<a data-toggle="modal" href="#otherTaxModal" class="btn btn-xs"><i class="fa fa-plus"></i> Add </a>
-					</td>
-					<td></td>
-				</tr>
-			</tbody>
-		</table>
+		<basic-info-tax-list [ccyCode]="hotel.ccyCode" [taxType]="otherTaxType"></basic-info-tax-list>
 	</div>
 </div>
